Fix unreadable font color

--- a/modules/theme/_theme-article--99-styling-elements-is-a-trap.scss
+++ b/modules/theme/_theme-article--99-styling-elements-is-a-trap.scss
@@ -126,7 +126,7 @@ $colors-writing-99:
         }
 
         &:nth-child(2) {
-            color: color(2, $colors-writing-99);
+            color: #000;
 
             button {
 
@@ -141,7 +141,7 @@ $colors-writing-99:
         }
 
         &:nth-child(3) {
-            color: color(3, $colors-bw);
+            color: #000;
 
             button {
 
